--- a/public/static/scss/layout/_panel.scss
+++ b/public/static/scss/layout/_panel.scss
@@ -137,10 +137,9 @@
 	& &-container {
 		position: relative;
 		z-index: 0;
-	}
-
-	.card {
-		position: relative;
+		& + * {
+			position: relative;
+		}
 	}
 }
 
